--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         </section>
         <section>
             <div class="seemles-exp">
-                <div class="section-2 container">
+                <div class="section-2 ">
                     <h2><strong>Create seamless payment experiences</strong></h2>
                     <p>Use leading technology that adapts to any business, store, industry, or shopper journey. You'll
                         enjoy flexible features to fit your business with a single integration, and some customers have
                         reported a <strong>risk-adjusted ROI of 106%.</strong></p>
                 </div>
-                <div class="section-3 container">
+                <div class="section-3 ">
                     <div class="faster-grow">
                         <div class="icon">
                             <img src="svg/homepage1.svg" alt="faster">
